<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/header"
            android:textColor="@color/backgroundColor"
            android:textSize="25sp" />

        <android.support.v7.widget.AppCompatImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/teen_summer_camp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="@color/backgroundColor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/backgroundColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="email"
                android:text="@string/time"
                android:textColor="@color/backgroundColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="map"
                android:text="@string/venue"
                android:textColor="@color/backgroundColor" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="phone"
            android:text="@string/phone"
            android:textColor="@color/backgroundColor" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click here to register"
            android:gravity="center"
            android:background="@color/borderColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/footer" />
    </LinearLayout>

</ScrollView>